fix bill layout, show banking checkbox, delete unexpected  white space in login form

--- a/Audio/assets/css/style.css
+++ b/Audio/assets/css/style.css
@@ -327,6 +327,7 @@ html {
   padding: 4rem;
   border-radius: 10px;
   position: relative;
+
 }
 
 .login_card::before {
@@ -981,7 +982,6 @@ html {
   width: 80%;
   color: black;
   font-size: 16px;
-  margin-bottom: 50px;
 }
 
 .customer-info > input {
@@ -1209,6 +1209,7 @@ html {
 .bill-info {
   width: 100%;
   font-size: 20px;
+  font-weight: 700;
   color: black;
   margin-bottom: 5px;
 }
@@ -1268,7 +1269,7 @@ html {
   width: 100%;
   height: 370px;
   position: absolute;
-  /* margin-top: 100px; */
+  /* bottom: 0; */
 }
 
 .bg-light {
